PAPI hook annotations